Microdisplacement; Very recent builds crash when image textures are used (when the mode is set to 'true') #49252

Closed
opened 2016-09-04 18:40:34 +02:00 by Adam Friesen · 24 comments

System Information
Win7 64 bit; 24 Gigs RAM; ATI 79xx GPU; Third-gen i7 CPU

Blender Version
Broken: Hash 95cb714
Worked: Hash 8a02c5f

Short description of error
Cycles microdisplacement (ie. when dicing is used) can no longer make use of image textures, as rendering an object using them will always cause Blender to crash. This is using CPU rendering by the way

Exact steps for others to reproduce the error
Open the .blend file and set the material displacement mode from bump to true. The mode to use both seems to work however.

Blend
MdispCrash.blend

**System Information** Win7 64 bit; 24 Gigs RAM; ATI 79xx GPU; Third-gen i7 CPU **Blender Version** Broken: Hash 95cb714 Worked: Hash 8a02c5f **Short description of error** Cycles microdisplacement (ie. when dicing is used) can no longer make use of image textures, as rendering an object using them will always cause Blender to crash. This is using CPU rendering by the way **Exact steps for others to reproduce the error** Open the .blend file and set the material displacement mode from *bump* to *true*. The mode to use both seems to work however. **Blend** [MdispCrash.blend](https://archive.blender.org/developer/F352780/MdispCrash.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon

#49379 was marked as duplicate of this issue

#49379 was marked as duplicate of this issue

#49300 was marked as duplicate of this issue

#49300 was marked as duplicate of this issue

#49301 was marked as duplicate of this issue

#49301 was marked as duplicate of this issue

#49287 was marked as duplicate of this issue

#49287 was marked as duplicate of this issue

#49271 was marked as duplicate of this issue

#49271 was marked as duplicate of this issue

#49244 was marked as duplicate of this issue

#49244 was marked as duplicate of this issue

#49266 was marked as duplicate of this issue

#49266 was marked as duplicate of this issue
Member

Added subscriber: @MaiLavelle

Added subscriber: @MaiLavelle
Mai Lavelle self-assigned this 2016-09-04 20:18:57 +02:00
Member

Seems to only happen rarely here, but I can reproduce if I switch the setting a bunch of times. If you know how to reproduce this issue more consistently please let me know.

Seems to only happen rarely here, but I can reproduce if I switch the setting a bunch of times. If you know how to reproduce this issue more consistently please let me know.
Author

The file crashes Blender every time on my system when I do that (using the build from the buildbot).

That's about as consistent as you can get.

The file crashes Blender every time on my system when I do that (using the build from the buildbot). That's about as consistent as you can get.

This issue was referenced by blender/cycles@c0f36ae278

This issue was referenced by blender/cycles@c0f36ae278fa2452de3f3b14957783e3a0d229dd

This issue was referenced by 56d2f4c20a

This issue was referenced by 56d2f4c20a8efcc839afbe31a3de2da15c34b54f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Think this should be fixed now but can't be completely sure as I wasn't able to reproduce consistently. If there's still a problem just let me know.

Think this should be fixed now but can't be completely sure as I wasn't able to reproduce consistently. If there's still a problem just let me know.

Added subscribers: @PratyakshGaur, @Sergey

Added subscribers: @PratyakshGaur, @Sergey
Added subscribers: @MarcoCheng, @brecht, @Leroy-Xie, @ThomasDinges

Added subscriber: @Volden

Added subscriber: @Volden

Added subscriber: @semaj-1

Added subscriber: @semaj-1
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Added subscriber: @alanzirpoli

Added subscriber: @alanzirpoli
Member

Added subscriber: @brinux

Added subscriber: @brinux

I don't know if it's appropriate to commend the people snatching up these reports and redirecting folks here, but you all are awesome and deserve to be commended. haha! :P

I don't know if it's appropriate to commend the people snatching up these reports and redirecting folks here, but you all are awesome and deserve to be commended. haha! :P
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49252
No description provided.