Fix T49252: Crash when image textures used with true displacement